--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile First</title>
+    <title>Media Query</title>
+    <link rel="stylesheet" href="mediaquery/media-query.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="phone" src="imgs/icon-phone.png" alt="Acessando via smarthphone">
+        <img id="tablet" src="imgs/icon-tablet.png" alt="Acessando via tablet">
+        <img id="print" src="imgs/icon-print.png" alt="Versão para impressão">
+        <img id="pc" src="imgs/icon-pc.png" alt="Versão para desktop">
+        <img id ="tv" src="imgs/icon-tv.png" alt="Versão para TV">
+        
+    </main>
 </body>
 </html>
